--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,40 @@ h1 {
 table{
     text-align: center;
   }
-#dayy{
-  background-color: aqua;
-}
+
 #agree{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+h3.green { color:green; }
+
+ul.bluetable{background-color: blanchedalmond;}
+
+a:hover{background-color: turquoise;}
+
+.square{
+    width: 100px;
+    height: 100px;
+    box-sizing: border-box;
+    border: 1px solid black;
+  }
+  
+  #board {
+    display: flex;
+    margin: 0 auto;
+    width: 500px;
+    flex-wrap: wrap;
+  }
+  .square:nth-of-type(1n){
+    background-color: black;
+  }
+  .square:nth-of-type(2n){
+    background-color: white;
+  }
+
+ p::selection{
+  color:  black;
+  background-color: blanchedalmond;
+ }
+ h2::first-letter{
+  font-size: 50px;
+ }
