--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ a:hover{background-color: turquoise;}
   }
   
   #board {
-    display: flex;
+    display: flex;  
     margin: 0 auto;
     width: 500px;
     flex-wrap: wrap;
@@ -45,4 +45,7 @@ a:hover{background-color: turquoise;}
  h2::first-letter{
   font-size: 50px;
  }
- 
+h3{
+  
+  background-color: darkorange;
+}
